--- a/index.html
+++ b/index.html
@@ -357,9 +357,10 @@
       document.getElementById("goldShop").innerText = userData.gold;
       document.getElementById("goldDisplay").innerText = ` 골드: ${userData.gold}`;
       document.getElementById("statPointDisplay").innerText = userData.statPoints;
-      document.getElementById("statStr").innerText = userData.str || 0;
-      document.getElementById("statDex").innerText = userData.dex || 0;
-      document.getElementById("statCon").innerText = userData.con || 0;
+      document.getElementById("str").innerText = `${userData.str} (+${userData.totalStr - userData.str})`;
+      document.getElementById("con").innerText = `${userData.con} (+${userData.totalCon - userData.con})`;
+      document.getElementById("dex").innerText = `${userData.dex} (+${userData.totalDex - userData.dex})`;
+
 
       const hpPercent = (userData.hp / userData.maxHp) * 100;
       document.getElementById("hpBar").style.width = hpPercent + "%";
@@ -1700,10 +1701,10 @@
       totalDex = Math.floor(totalDex);
       totalCon = Math.floor(totalCon);
     
-      document.getElementById('statStr').textContent = totalStr;
-      document.getElementById('statDex').textContent = totalDex;
-      document.getElementById('statCon').textContent = totalCon;
-    
+      document.getElementById("str").innerText = `${userData.str} (+${userData.totalStr - userData.str})`;
+      document.getElementById("con").innerText = `${userData.con} (+${userData.totalCon - userData.con})`;
+      document.getElementById("dex").innerText = `${userData.dex} (+${userData.totalDex - userData.dex})`;
+
       const maxHp = (Math.floor(userData.level / 3) + 1) * totalCon * 5 + 100;
       userData.maxHp = maxHp;
       if (userData.hp > maxHp) userData.hp = maxHp;
