--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
       <button onclick="showTab('ranking')">랭킹</button>
       <button onclick="showTab('arena')">아레나</button>
       <button onclick="showTab('inventory')">인벤토리</button>
+      <button onclick="showTab('enhance')">강화</button>
     </div>
 
     <div id="newTab" style="display:none;">
