--- a/index.html
+++ b/index.html
@@ -955,6 +955,7 @@
       document.getElementById("rankingTab").style.display = name === "ranking" ? "block" : "none";
       document.getElementById("arenaTab").style.display = name === "arena" ? "block" : "none";
       document.getElementById("inventoryTab").style.display = name === "inventory" ? "block" : "none";
+      document.getElementById("enhanceTab").style.display = name === "enhance" ? "block" : "none";
     
       if (name === "shop") document.getElementById("goldShop").innerText = userData.gold;
       if (name === "ranking") loadRanking();
