--- a/index.html
+++ b/index.html
@@ -1760,7 +1760,7 @@
     
     // 강화 시도 함수
     async function enhanceItem() {
-      const itemId = document.getElementById("enhanceSelect").value;
+      const itemId = document.getElementById("itemSelect").value;
       if (!itemId) {
         alert("강화할 아이템을 선택하세요.");
         return;
