--- a/index.html
+++ b/index.html
@@ -1602,6 +1602,7 @@
         if (invItem) {
           invItem.equipped = true;
           updateUI();
+          saveData();
         }
       });
     }
