--- a/index.html
+++ b/index.html
@@ -1549,6 +1549,7 @@
           } else {
             equipItem(item.item_id);
           }
+          saveData();
         };
     
         container.appendChild(div);
