--- a/index.html
+++ b/index.html
@@ -1816,6 +1816,19 @@
         alert("강화 중 오류가 발생했습니다.");
       }
     }
+    function updateEnhanceChance() {
+      const selectedItemId = document.getElementById('itemSelect').value;
+      const selectedItem = userInventory.find(item => item.item_id === selectedItemId);
+      
+      if (selectedItem) {
+        const tries = selectedItem.enhancement_level || 0;
+        const chance = 1 / (1 + tries);
+        const percent = (chance * 100).toFixed(2);
+        document.getElementById('enhanceChance').innerText = `강화 성공 확률: ${percent}%`;
+      } else {
+        document.getElementById('enhanceChance').innerText = '강화 성공 확률: -';
+      }
+    }
   </script>
 </body>
 </html>
