--- a/index.html
+++ b/index.html
@@ -1818,7 +1818,7 @@
     }
     function updateEnhanceChance() {
       const selectedItemId = document.getElementById('itemSelect').value;
-      const selectedItem = userInventory.find(item => item.item_id === selectedItemId);
+      const selectedItem = userData.inventory.find(item => item.item_id === selectedItemId);
       
       if (selectedItem) {
         const tries = selectedItem.enhancement_level || 0;
