--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
       <div style="margin-bottom: 10px;">
         <label for="itemSelect">강화할 아이템 선택:</label><br />
         <select id="itemSelect" style="width: 100%; padding: 5px; font-size: 1rem;" onchange="updateEnhanceChance()">
-          <!-- JS로 옵션 채움 -->
+          <option value="">강화할 아이템을 선택해주세요</option>
         </select>
         <p id="enhanceChance" style="margin-top: 5px; font-size: 0.9rem; color: #555;">
           강화 확률: -%
