--- a/index.html
+++ b/index.html
@@ -282,6 +282,7 @@
         <p id="enhanceChance" style="margin-top: 5px; font-size: 0.9rem; color: #555;">
           강화 확률: -%
         </p>
+        <p>강화 성공하면 장비 스탯 2배 증가 실패하면 장비 파괴</p>
       </div>
     
       <button onclick="enhanceItem()" style="padding: 8px 16px; font-size: 1rem; cursor: pointer;">
