--- a/index.html
+++ b/index.html
@@ -269,6 +269,18 @@
         <div id="slot-boots">신발: 없음</div>
       </div>
       <div id="inventoryContainer" style="display: flex; gap: 10px; flex-wrap: wrap; border: 1px solid #ccc; padding: 10px;"></div>
+      <div id="equipmentDetail" style="display:none; border:1px solid #ccc; padding:10px; margin-top:10px;">
+      <h3 id="equipName"></h3>
+      <p>STR 보너스: <span id="equipStrBonus"></span></p>
+      <p>DEX 보너스: <span id="equipDexBonus"></span></p>
+      <p>CON 보너스: <span id="equipConBonus"></span></p>
+      <p>STR 배율: <span id="equipStrMultiplier"></span></p>
+      <p>DEX 배율: <span id="equipDexMultiplier"></span></p>
+      <p>CON 배율: <span id="equipConMultiplier"></span></p>
+    
+      <button id="closeDetailBtn">나가기</button>
+      <button id="equipBtn">장착하기</button>
+    </div>
     </div>
     
     <div id="enhanceTab" style="display:none; padding: 10px; border: 1px solid #ccc;">
