--- a/index.html
+++ b/index.html
@@ -1874,7 +1874,7 @@
       // 장착 버튼 이벤트 등록
       const equipBtn = document.getElementById("equipBtn");
       equipBtn.onclick = () => {
-        equipItem(item.id);  // 장착 함수 (별도 구현 필요)
+        equipItem(item.id);  // 장착 함수
         closeEquipmentDetail();
       };
     
