--- a/index.html
+++ b/index.html
@@ -1597,6 +1597,7 @@
         renderInventory();
         renderEquipment();
         updateFinalStats(userData);
+        saveData();
     
       } catch (e) {
         console.error(e);
