--- a/index.html
+++ b/index.html
@@ -1507,6 +1507,7 @@
         renderInventory();
         renderEquipment();
         updateFinalStats(userData);
+        updateUI();
         saveData();
     
       } catch (e) {
