--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
       <div id="pvpLog" style="text-align:left; max-width:400px; margin:0 auto; background:#fff; padding:10px; border:1px solid #ccc; height:200px; overflow-y:auto;"></div>
     </div>
 
-    <div id="inventoryTab" style="display:none">
+    <div id="inventoryTab" style="display:none" onclick="loadInventory()">
       <h2>🎒 인벤토리</h2>
       <div id="equipmentSlots" style="display: flex; gap: 10px; margin-bottom: 20px;">
         <div id="slot-weapon">무기: 없음</div>
