--- a/index.html
+++ b/index.html
@@ -1627,7 +1627,7 @@
     
         div.onclick = () => {
           if (item.equipped) {
-            unequipItem(item.item_id);
+            unequipItem(item.id);
           } else {
             handleEquipItem(index); // 상세창 열기 + 장착 처리
           }
