--- a/index.html
+++ b/index.html
@@ -1504,7 +1504,7 @@
     
         await saveEquippedItems(userData.uid, equippedItems);
     
-        await loadInventory();
+        loadInventory();
         renderInventory();
         renderEquipment();
         updateFinalStats(userData);
