--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       <button onclick="showTab('donate')">후원</button>
       <button onclick="showTab('ranking')">랭킹</button>
       <button onclick="showTab('arena')">아레나</button>
-      <button onclick="showTab('inventory')">인벤토리</button>
+      <button onclick="showTab('inventory'); loadInventory()">인벤토리</button>
       <button onclick="showTab('enhance')">강화</button>
     </div>
 
