--- a/index.html
+++ b/index.html
@@ -1051,6 +1051,9 @@
             str: 0,
             dex: 0,
             con: 0,
+            totalStr: 0,
+            totalDex: 0,
+            totalCon: 0,
             statPoints: 0
           })
         });
